# labeled-mask

./: pyproject.toml
labeled_mask/: __init__.py  mask_manager.py  simple_slicer.py
test/: test_model_manager.py  test_simple_slicer.py
